fixed desktop layout issue

--- a/css/app.css
+++ b/css/app.css
@@ -71,7 +71,7 @@ h1 {
     padding: 0;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 1fr 9fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 9fr 1fr 1fr;
     grid-gap: none;
     justify-content: center;
     align-items: center;
@@ -83,12 +83,14 @@ h1 {
 /***--- --- --- DECK (cards container) --- --- ---***/
 
 .deck {
-    width: 660px;
-    grid-column: 2/12;
-    grid-row: 2/6;
+
+    height: 75vh;
+    max-width: 75vh;
+    grid-column: 3/11;
+    grid-row: 3;
     margin: 0 auto;
     background: #9acfc8 60%;
-    padding: 1em;
+    padding: 0em 1em;
     border-radius: 10px;
     background: #9acfc8 60%;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
@@ -107,10 +109,10 @@ img {
 }
 
 .card {
-    margin: 10px;
-    height: 100px !important;
-    width: 100px !important;
-    border-radius: 10px !important;
+    margin: 0.25em;
+    max-height: 10vh;
+    max-width: 10vh;
+    border-radius: 10px;
     background: #2e3d49;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
     cursor: pointer;
@@ -177,19 +179,19 @@ img {
     align-content: center;
     font-size: 16px;
     margin: 1em 0;
-    height: 75px;
+    height: 10vh;
 }
 
 .time-panel {
     margin-top: 0;
-    grid-column: 2/7;
-    grid-row: 6;
+    grid-column: 3/7;
+    grid-row: 5;
 }
 
 .score-panel {
     margin-top: 0;
-    grid-column: 7/12;
-    grid-row: 6;
+    grid-column: 7/11;
+    grid-row: 5;
 
 }
 
@@ -306,10 +308,10 @@ footer {
 
 .swal-overlay {
     background-color: rgba(46, 61, 76, 0.60);
+
 }
 
 .swal-modal {
-
     background-image: url('../img/modal-background.svg');
     background-repeat: no-repeat;
     background-size: contain;
@@ -418,7 +420,7 @@ footer {
 
 /***--- ---NARROW PHONE --- ---***/
 
-@media only screen and (max-width: 325px) {
+@media screen and (max-width: 321px) {
     .body {
         background-image: url("../img/background%20gradient.svg");
         background-repeat: no-repeat;
@@ -443,10 +445,14 @@ footer {
         grid-row: 1;
         width: 100vw;
         height: 7.5vh;
-        margin: 0;
+        margin-top: -1em;
         padding: 0;
+        font-size: 12px;
     }
-
+    .title > h1 {
+        font-size: 3vh;
+        padding: 1vh;
+    }
     /***--- --- --- SCORE PANEL --- --- ---***/
     .time-panel {
         margin-bottom: -5vh;
@@ -487,11 +493,64 @@ footer {
     footer {
         height: 5vh;
     }
+    footer > p {
+        margin-top: -0.75vh;
+    }
+    /***--- --- --- MODALS --- --- ---***/
+    .swal-text {
+        font-weight: 700;
+        font-size: 16px;
+        padding: 0em 1em 8em 1em;
+        display: block;
+        margin-top: 0;
+        margin: 0 2em;
+        text-align: center;
+        color: #2e3d49;
+    }
+
+    .swal-button {
+        padding: 7px 19px;
+        border-radius: 5px;
+        background-color: #e7a7a8;
+        color: white;
+        font-size: 12px;
+        text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+        margin: auto;
+    }
+
+    .swal-footer {
+        text-align: center;
+        margin-top: 1em;
+        padding: 5em 2em 0.5em 2em;
+    }
+
+    .swal-greetings,
+    .swal-restart,
+    .swal-pause,
+    .swal-endgame {
+        width: 75 vw;
+    }
+
+    .swal-restart > .swal-title,
+    .swal-pause > .swal-title,
+    .swal-endgame > .swal-title {
+        font-size: 20px;
+        margin: 1em 2em;
+    }
+    .swal-restart > .swal-text,
+    .swal-pause > .swal-text,
+    .swal-endgame > .swal-text {
+        margin-bottom: 0;
+        font-size: 12px;
+        padding: 1em;
+    }
+}
+
 }
 
 /***--- ---PHONE --- ---***/
 
-@media only screen and (min-width: 322px) and (max-width: 766px) {
+@media screen and (min-width: 322px) and (max-width: 766px) {
     .body {
         background-image: url("../img/background%20gradient.svg");
         background-repeat: no-repeat;
@@ -563,9 +622,55 @@ footer {
     footer {
         height: 5vh;
     }
+    /***--- --- --- MODALS --- --- ---***/
+    .swal-text {
+        font-weight: 700;
+        font-size: 16px;
+        padding: 0em 1em 8em 1em;
+        display: block;
+        margin-top: 0;
+        margin: 0 2em;
+        text-align: center;
+        color: #2e3d49;
+    }
 
+    .swal-button {
+        padding: 7px 19px;
+        border-radius: 5px;
+        background-color: #e7a7a8;
+        color: white;
+        font-size: 12px;
+        text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+        margin: auto;
+    }
+
+    .swal-footer {
+        text-align: center;
+        margin-top: 1em;
+        padding: 5em 2em 0.5em 2em;
+    }
+
+    .swal-greetings,
+    .swal-restart,
+    .swal-pause,
+    .swal-endgame {
+        width: 75 vw;
+    }
+
+    .swal-restart > .swal-title,
+    .swal-pause > .swal-title,
+    .swal-endgame > .swal-title {
+        font-size: 20px;
+        margin: 1em 2em;
+    }
+    .swal-restart > .swal-text,
+    .swal-pause > .swal-text,
+    .swal-endgame > .swal-text {
+        margin-bottom: 0;
+        font-size: 12px;
+        padding: 1em;
+    }
 }
-
 
 
 /*-------------THE ᕕ( ᐛ )ᕗ END-----------------*/
